resolved issue with chart not displaying on smaller screerns like a laptop

--- a/css/fractl.css
+++ b/css/fractl.css
@@ -1,111 +1,113 @@
 body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    overflow: hidden;
-}
-
-.chart {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    width: 960px;
-    height: 4500px;
-    position: relative;
-    margin: 0 auto;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 h1 {
-    text-align: center;
-    font-weight: 350;
+  text-align: center;
+  font-weight: 350;
 }
 
 h2 {
-    color: #7a8285;
-    font-weight: 400;
-    text-align: center;
+  color: #7a8285;
+  font-weight: 400;
+  text-align: center;
 }
 
 span {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .divider {
-    height: 1px;
-    overflow: hidden;
-    background-color: #e0e0e0;
-    width: 60%;
-    margin: 0 auto;
+  height: 1px;
+  overflow: hidden;
+  background-color: #e0e0e0;
+  width: 60%;
+  margin: 0 auto;
 }
 
 .orangeBar {
-    background-color: #ff6100;
-    height: 20px;
+  background-color: #ff6100;
+  height: 20px;
 }
 
 .labelName {
-    stroke: black;
-    font-weight: 300;
-    font-size: 12px;
+  stroke: black;
+  font-weight: 300;
+  font-size: 12px;
 }
 
 .labelValue {
-    font-size: 22px;
-    font-weight: 600;
+  font-size: 22px;
+  font-weight: 600;
 }
 
 svg {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 path.slice {
-    stroke-width: 2px;
+  stroke-width: 2px;
 }
 
 polyline {
-    opacity: .3;
-    stroke: black;
-    stroke-width: 1px;
-    fill: none;
+  opacity: 0.3;
+  stroke: black;
+  stroke-width: 1px;
+  fill: none;
 }
 /* Makes the chart responsive */
 .svg-container {
-    display: none;
-    position: relative;
-    width: 100%;
-    padding-bottom: 100%; /* aspect ratio */
-    vertical-align: top;
-    overflow: hidden;
+  display: none;
+  position: relative;
+  width: 100%;
+  vertical-align: top;
+  overflow: hidden;
 }
 .svg-content-responsive {
-    display: inline-block;
-    position: absolute;
-    top: 10px;
-    left: 0;
+  display: inline-block;
+  position: absolute;
+  top: 10px;
+  left: 0;
 }
 /* Control speed of animations for animate.CSS */
 .slow {
-    -webkit-animation-duration: 2s;
-    -webkit-animation-delay: 0s;
-  }
+  -webkit-animation-duration: 2s;
+  -webkit-animation-delay: 0s;
+}
 
-  .realSlow {
-    -webkit-animation-duration: 3s;
-    -webkit-animation-delay: 0s;
-  }
+.realSlow {
+  -webkit-animation-duration: 3s;
+  -webkit-animation-delay: 0s;
+}
 
 img {
-    width: 220px;
-    position: fixed;
-    bottom: 0px;
-    right: 0px;
-    display: none;
+  width: 220px;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  display: none;
+}
+
+@media (max-width: 600px) {
+  img {
+    width: 100px;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 935px) {
+  img {
+    width: 150px;
+  }
 }
 
 #name {
-    font-size: 60px;
-    margin: 0;
-    color: rgba(198, 144, 101, 1)
+  font-size: 60px;
+  margin: 0;
+  color: rgba(198, 144, 101, 1);
 }
 
 #underName {
-    margin: 0;
+  margin: 0;
 }
